# greedy_objrec_ransac

./: CMakeLists.txt  README.md  package.xml
data/ln_joint/: seg_0.pcd  seg_1.pcd  seg_2.pcd  seg_3.pcd  seg_4.pcd  seg_5.pcd
include/greedy/: seg.h
launch/: demo.launch
src/: main_seg.cpp  main_test_pose.cpp  main_test_seg.cpp  node.cpp
src/Greedy/: refine.hpp  seg.cpp  utility.cpp
